[package]
name = "cec-tunnel"
version = "0.1.0"
edition = "2021"
description = "CEC Gateway Tunnel Client - 内网穿透客户端"
license = "MIT"
repository = "https://github.com/goyiyun/cec-tunnel"
keywords = ["tunnel", "proxy", "nat", "reverse-proxy"]
categories = ["network-programming", "command-line-utilities"]

[[bin]]
name = "cec-tunnel"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.21"
hostname = "0.3"
local-ip-address = "0.6"

[profile.release]
lto = true
codegen-units = 1
strip = true
