[package]
name = "cec-tunnel"
version = "0.1.2"
edition = "2021"
description = "CEC Tunnel - 轻量级内网穿透工具 (客户端 + 服务端)"
license = "MIT"
repository = "https://github.com/civil-engineering-cloud/cec-tunnel"
keywords = ["tunnel", "proxy", "nat", "reverse-proxy", "frp"]
categories = ["network-programming", "command-line-utilities"]

[[bin]]
name = "cec-tunnel"
path = "src/client/main.rs"

[[bin]]
name = "cec-tunnel-server"
path = "src/server/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.24", default-features = false, features = ["connect", "rustls-tls-webpki-roots"] }
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
hostname = "0.4"
local-ip-address = "0.6"
uuid = { version = "1", features = ["v4"] }
dashmap = "6"
axum = { version = "0.7", default-features = false, features = ["ws", "tokio", "http1", "json"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }

[profile.release]
lto = true
codegen-units = 1
strip = true
